load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "keys.go",
        "provider.go",
        "system.go",
        "system.pb.go",
        "testutil.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sqlbase",
        "//pkg/util/log",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//vendor/github.com/gogo/protobuf/proto",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "keys_test.go",
        "main_test.go",
        "system_test.go",
    ],
    deps = [
        ":config",
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sqlbase",
        "//pkg/testutils",
        "//pkg/util/encoding",
        "//pkg/util/leaktest",
        "//vendor/github.com/gogo/protobuf/proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "keys_test.go",
        "main_test.go",
        "system_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        ":config",
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sqlbase",
        "//pkg/testutils",
        "//pkg/util/encoding",
        "//pkg/util/leaktest",
        "//vendor/github.com/gogo/protobuf/proto",
    ],
)
