load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backupccl",
    srcs = [
        "backup.pb.go",
        "backup_job.go",
        "backup_planning.go",
        "backup_processor.go",
        "backup_processor_planning.go",
        "create_scheduled_backup.go",
        "manifest_handling.go",
        "restore_data_processor.go",
        "restore_job.go",
        "restore_planning.go",
        "restore_processor_planning.go",
        "restore_schema_change_creation.go",
        "schedule_exec.go",
        "show.go",
        "split_and_scatter_processor.go",
        "targets.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/ccl/backupccl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/build",
        "//pkg/ccl/storageccl",
        "//pkg/ccl/utilccl",
        "//pkg/gossip",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/jobs/jobsprotectedts",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/concurrency/lock",
        "//pkg/kv/kvserver/protectedts",
        "//pkg/roachpb",
        "//pkg/scheduledjobs",
        "//pkg/security",
        "//pkg/server/telemetry",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/covering",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/parser",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/physicalplan",
        "//pkg/sql/privilege",
        "//pkg/sql/rowexec",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/sql/sqlbase",
        "//pkg/sql/sqlutil",
        "//pkg/sql/stats",
        "//pkg/sql/types",
        "//pkg/storage/cloud",
        "//pkg/storage/cloudimpl",
        "//pkg/util/ctxgroup",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/interval",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/util/tracing",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/cockroachdb/logtags",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/github.com/gogo/protobuf/sortkeys",
        "//vendor/github.com/gogo/protobuf/types",
        "//vendor/github.com/gorhill/cronexpr",
        "//vendor/github.com/lib/pq/oid",
    ],
)

go_test(
    name = "backupccl_test",
    srcs = [
        "backup_cloud_test.go",
        "backup_test.go",
        "bench_test.go",
        "create_scheduled_backup_test.go",
        "full_cluster_backup_restore_test.go",
        "helpers_test.go",
        "main_test.go",
        "partitioned_backup_test.go",
        "restore_mid_schema_change_test.go",
        "restore_old_versions_test.go",
        "show_test.go",
        "split_and_scatter_processor_test.go",
        "targets_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":backupccl"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/importccl",
        "//pkg/ccl/kvccl",
        "//pkg/ccl/partitionccl",
        "//pkg/ccl/storageccl",
        "//pkg/ccl/utilccl",
        "//pkg/ccl/utilccl/sampledataccl",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/jobs/jobstest",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvclient/kvcoord",
        "//pkg/kv/kvserver",
        "//pkg/roachpb",
        "//pkg/scheduledjobs",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/lease",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/parser",
        "//pkg/sql/rowflow",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/storage/cloud",
        "//pkg/storage/cloudimpl",
        "//pkg/testutils",
        "//pkg/testutils/distsqlutils",
        "//pkg/testutils/jobutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/retry",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/workload/bank",
        "//pkg/workload/workloadsql",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials",
        "//vendor/github.com/cockroachdb/cockroach-go/crdb",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/github.com/gogo/protobuf/types",
        "//vendor/github.com/jackc/pgx",
        "//vendor/github.com/kr/pretty",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/golang.org/x/sync/errgroup",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "backup_cloud_test.go",
        "backup_test.go",
        "bench_test.go",
        "create_scheduled_backup_test.go",
        "full_cluster_backup_restore_test.go",
        "helpers_test.go",
        "main_test.go",
        "partitioned_backup_test.go",
        "restore_mid_schema_change_test.go",
        "restore_old_versions_test.go",
        "show_test.go",
        "split_and_scatter_processor_test.go",
        "targets_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        ":backupccl",
        "//pkg/base",
        "//pkg/ccl/importccl",
        "//pkg/ccl/kvccl",
        "//pkg/ccl/partitionccl",
        "//pkg/ccl/storageccl",
        "//pkg/ccl/utilccl",
        "//pkg/ccl/utilccl/sampledataccl",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/jobs/jobstest",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvclient/kvcoord",
        "//pkg/kv/kvserver",
        "//pkg/roachpb",
        "//pkg/scheduledjobs",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/lease",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/parser",
        "//pkg/sql/rowflow",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/storage/cloud",
        "//pkg/storage/cloudimpl",
        "//pkg/testutils",
        "//pkg/testutils/distsqlutils",
        "//pkg/testutils/jobutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/retry",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/workload/bank",
        "//pkg/workload/workloadsql",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials",
        "//vendor/github.com/cockroachdb/cockroach-go/crdb",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/github.com/gogo/protobuf/types",
        "//vendor/github.com/jackc/pgx",
        "//vendor/github.com/kr/pretty",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/golang.org/x/sync/errgroup",
    ],
)
