load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "partitionccl",
    srcs = ["partition.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/ccl/partitionccl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ccl/utilccl",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/util/encoding",
        "//pkg/util/errorutil/unimplemented",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "partitionccl_test",
    srcs = [
        "drop_test.go",
        "main_test.go",
        "partition_test.go",
        "zone_test.go",
    ],
    embed = [":partitionccl"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/importccl",
        "//pkg/ccl/storageccl",
        "//pkg/ccl/utilccl",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/kv/kvserver",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/gcjob",
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/tests",
        "//pkg/sql/types",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "drop_test.go",
        "main_test.go",
        "partition_test.go",
        "zone_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/importccl",
        "//pkg/ccl/storageccl",
        "//pkg/ccl/utilccl",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/keys",
        "//pkg/kv/kvserver",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/catalogkv",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/gcjob",
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/tests",
        "//pkg/sql/types",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
    ],
)
