load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storageccl",
    srcs = [
        "encryption.go",
        "export.go",
        "import.go",
        "key_rewriter.go",
        "revision_reader.go",
        "writebatch.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/ccl/storageccl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/storageccl/engineccl",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/bulk",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/batcheval",
        "//pkg/kv/kvserver/batcheval/result",
        "//pkg/kv/kvserver/spanset",
        "//pkg/roachpb",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sqlbase",
        "//pkg/storage",
        "//pkg/storage/cloud",
        "//pkg/storage/enginepb",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/humanizeutil",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/retry",
        "//pkg/util/tracing",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/golang.org/x/crypto/pbkdf2",
    ],
)

go_test(
    name = "storageccl_test",
    srcs = [
        "bench_test.go",
        "encryption_test.go",
        "export_test.go",
        "import_test.go",
        "key_rewriter_test.go",
        "main_test.go",
        "writebatch_test.go",
    ],
    embed = [":storageccl"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/utilccl/sampledataccl",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/batcheval",
        "//pkg/kv/kvserver/kvserverbase",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sqlbase",
        "//pkg/storage",
        "//pkg/storage/cloudimpl",
        "//pkg/storage/enginepb",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/humanizeutil",
        "//pkg/util/leaktest",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/workload/bank",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/stretchr/testify/require",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bench_test.go",
        "encryption_test.go",
        "export_test.go",
        "import_test.go",
        "key_rewriter_test.go",
        "main_test.go",
        "writebatch_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/utilccl/sampledataccl",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/batcheval",
        "//pkg/kv/kvserver/kvserverbase",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sqlbase",
        "//pkg/storage",
        "//pkg/storage/cloudimpl",
        "//pkg/storage/enginepb",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/humanizeutil",
        "//pkg/util/leaktest",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/workload/bank",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
