load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utilccl",
    srcs = [
        "jobutils.go",
        "license_check.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/ccl/utilccl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/utilccl/licenseccl",
        "//pkg/jobs",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/util/timeutil",
        "//pkg/util/uuid",
    ],
)

go_test(
    name = "utilccl_test",
    srcs = ["license_check_test.go"],
    embed = [":utilccl"],
    deps = [
        "//pkg/ccl/utilccl/licenseccl",
        "//pkg/settings/cluster",
        "//pkg/testutils",
        "//pkg/util/timeutil",
        "//pkg/util/uuid",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["license_check_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/ccl/utilccl/licenseccl",
        "//pkg/settings/cluster",
        "//pkg/testutils",
        "//pkg/util/timeutil",
        "//pkg/util/uuid",
    ],
)
