load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "geoproj",
    srcs = [
        "geoproj.go",
        "proj.cc",
        "proj.h",
        "zcgo_flags.go",
    ],
    cgo = True,
    clinkopts = [
        "-L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/cryptopp -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/protobuf -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/jemalloc/lib -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/snappy -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/libedit/src/.libs -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/rocksdb -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/libroach -L/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/proj/lib",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "-lproj",
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lproj",
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "-lproj",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-lproj_4_9 -lshlwapi -lrpcrt4",
        ],
        "//conditions:default": [],
    }),
    cppopts = [
        # "-Ic-deps/proj/src",
        "-I/Users/irfansharif/Software/src/github.com/cockroachdb/cockroach/c-deps/proj/src",
        "-I/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/jemalloc/include",
    ],
    cxxopts = ["-std=c++14"],
    importpath = "github.com/cockroachdb/cockroach/pkg/geo/geoproj",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/geo/geographiclib",
        "//pkg/geo/geoprojbase",
        "//vendor/github.com/cockroachdb/errors",
    ],
)

go_test(
    name = "geoproj_test",
    srcs = ["geoproj_test.go"],
    embed = [":geoproj"],
    deps = [
        "//pkg/geo/geoprojbase",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
