load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rsg",
    srcs = ["rsg.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/internal/rsg",
    visibility = ["//pkg:__subpackages__"],
    deps = [
        "//pkg/internal/rsg/yacc",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/util/syncutil",
    ],
)

go_test(
    name = "rsg_test",
    srcs = ["rsg_test.go"],
    embed = [":rsg"],
)

go_test(
    name = "go_default_test",
    srcs = ["rsg_test.go"],
    embed = [":go_default_library"],
)
