load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backfill",
    srcs = ["backfill.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/backfill",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/execinfra",
        "//pkg/sql/row",
        "//pkg/sql/schemaexpr",
        "//pkg/sql/sem/transform",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/util",
        "//pkg/util/log",
    ],
)
