load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "catalog",
    srcs = [
        "accessor.go",
        "catalog.go",
        "descriptor.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/catalog",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//vendor/github.com/cockroachdb/errors",
    ],
)
