load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "colexec",
    srcs = [
        "aggregate_funcs.go",
        "and_or_projection.eg.go",
        "bool_vec_to_sel.go",
        "buffer.go",
        "builtin_funcs.go",
        "cancel_checker.go",
        "case.go",
        "cast.eg.go",
        "columnarizer.go",
        "const.eg.go",
        "constants.go",
        "count.go",
        "default_cmp_expr.eg.go",
        "default_cmp_proj_ops.eg.go",
        "default_cmp_sel_ops.eg.go",
        "deselector.go",
        "disk_spiller.go",
        "distinct.eg.go",
        "expr.go",
        "external_hash_joiner.go",
        "external_sort.go",
        "fn_op.go",
        "hash.go",
        "hash_aggregator.eg.go",
        "hash_aggregator.go",
        "hash_any_not_null_agg.eg.go",
        "hash_avg_agg.eg.go",
        "hash_bool_and_or_agg.eg.go",
        "hash_concat_agg.eg.go",
        "hash_count_agg.eg.go",
        "hash_default_agg.eg.go",
        "hash_min_max_agg.eg.go",
        "hash_sum_agg.eg.go",
        "hash_sum_int_agg.eg.go",
        "hash_utils.eg.go",
        "hash_utils.go",
        "hashjoiner.eg.go",
        "hashjoiner.go",
        "hashtable.go",
        "hashtable_distinct.eg.go",
        "hashtable_full_default.eg.go",
        "hashtable_full_deleting.eg.go",
        "invariants_checker.go",
        "is_null_ops.eg.go",
        "like_ops.eg.go",
        "like_ops.go",
        "limit.go",
        "materializer.go",
        "mergejoinbase.eg.go",
        "mergejoiner.go",
        "mergejoiner_exceptall.eg.go",
        "mergejoiner_fullouter.eg.go",
        "mergejoiner_inner.eg.go",
        "mergejoiner_intersectall.eg.go",
        "mergejoiner_leftanti.eg.go",
        "mergejoiner_leftouter.eg.go",
        "mergejoiner_leftsemi.eg.go",
        "mergejoiner_rightouter.eg.go",
        "mergejoiner_util.go",
        "offset.go",
        "one_shot.go",
        "op_creation.go",
        "operator.go",
        "ordered_aggregator.go",
        "ordered_any_not_null_agg.eg.go",
        "ordered_avg_agg.eg.go",
        "ordered_bool_and_or_agg.eg.go",
        "ordered_concat_agg.eg.go",
        "ordered_count_agg.eg.go",
        "ordered_default_agg.eg.go",
        "ordered_min_max_agg.eg.go",
        "ordered_sum_agg.eg.go",
        "ordered_sum_int_agg.eg.go",
        "ordered_synchronizer.eg.go",
        "ordinality.go",
        "parallel_unordered_synchronizer.go",
        "partially_ordered_distinct.go",
        "partitioner.go",
        "proj_const_left_ops.eg.go",
        "proj_const_right_ops.eg.go",
        "proj_non_const_ops.eg.go",
        "quicksort.eg.go",
        "rank.eg.go",
        "relative_rank.eg.go",
        "routers.go",
        "row_number.eg.go",
        "rowstovec.eg.go",
        "select_in.eg.go",
        "selection_ops.eg.go",
        "serial_unordered_synchronizer.go",
        "simple_project.go",
        "sort.eg.go",
        "sort.go",
        "sort_chunks.go",
        "sorttopk.go",
        "spilling_queue.go",
        "stats.go",
        "substring.eg.go",
        "tuple_proj_op.go",
        "unordered_distinct.go",
        "utils.eg.go",
        "utils.go",
        "values_differ.eg.go",
        "vec_comparators.eg.go",
        "vec_to_datum.eg.go",
        "window_peer_grouper.eg.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/colexec",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/col/coldata",
        "//pkg/col/coldataext",
        "//pkg/col/typeconv",
        "//pkg/server/telemetry",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/colcontainer",
        "//pkg/sql/colexec/execpb",
        "//pkg/sql/colexecbase",
        "//pkg/sql/colexecbase/colexecerror",
        "//pkg/sql/colmem",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlbase",
        "//pkg/sql/sqltelemetry",
        "//pkg/sql/types",
        "//pkg/util/contextutil",
        "//pkg/util/duration",
        "//pkg/util/encoding",
        "//pkg/util/grpcutil",
        "//pkg/util/log",
        "//pkg/util/mon",
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/util/timeutil/pgdate",
        "//pkg/util/tracing",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/lib/pq/oid",
        "//vendor/github.com/marusama/semaphore",
    ],
)

go_test(
    name = "colexec_test",
    srcs = [
        "aggregators_test.go",
        "and_or_projection_test.go",
        "bool_vec_to_sel_test.go",
        "buffer_test.go",
        "builtin_funcs_test.go",
        "cancel_checker_test.go",
        "case_test.go",
        "cast_test.go",
        "columnarizer_test.go",
        "const_test.go",
        "count_test.go",
        "default_agg_test.go",
        "default_cmp_op_test.go",
        "dep_test.go",
        "deselector_test.go",
        "distinct_test.go",
        "external_hash_joiner_test.go",
        "external_sort_test.go",
        "hash_utils_test.go",
        "hashjoiner_test.go",
        "inject_setup_test.go",
        "is_null_ops_test.go",
        "like_ops_test.go",
        "limit_test.go",
        "main_test.go",
        "materializer_test.go",
        "mergejoiner_test.go",
        "offset_test.go",
        "ordered_synchronizer_test.go",
        "ordinality_test.go",
        "parallel_unordered_synchronizer_test.go",
        "projection_ops_test.go",
        "routers_test.go",
        "rowstovec_test.go",
        "select_in_test.go",
        "selection_ops_test.go",
        "serial_unordered_synchronizer_test.go",
        "simple_project_test.go",
        "sort_chunks_test.go",
        "sort_test.go",
        "sorttopk_test.go",
        "spilling_queue_test.go",
        "stats_test.go",
        "types_integration_test.go",
        "utils_test.go",
        "window_functions_test.go",
    ],
    embed = [":colexec"],
    deps = [
        "//pkg/col/coldata",
        "//pkg/col/coldataext",
        "//pkg/col/coldatatestutils",
        "//pkg/col/colserde",
        "//pkg/col/typeconv",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/colcontainer",
        "//pkg/sql/colexec/colbuilder",
        "//pkg/sql/colexec/execgen",
        "//pkg/sql/colexecbase",
        "//pkg/sql/colexecbase/colexecerror",
        "//pkg/sql/colmem",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/parser",
        "//pkg/sql/rowexec",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/testutils",
        "//pkg/testutils/buildutil",
        "//pkg/testutils/colcontainerutils",
        "//pkg/testutils/distsqlutils",
        "//pkg/testutils/skip",
        "//pkg/util/duration",
        "//pkg/util/encoding",
        "//pkg/util/envutil",
        "//pkg/util/humanizeutil",
        "//pkg/util/json",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/mon",
        "//pkg/util/randutil",
        "//pkg/util/syncutil",
        "//pkg/util/timeofday",
        "//pkg/util/timeutil",
        "//pkg/util/timeutil/pgdate",
        "//vendor/github.com/apache/arrow/go/arrow/array",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/marusama/semaphore",
        "//vendor/github.com/pmezard/go-difflib/difflib",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aggregators_test.go",
        "and_or_projection_test.go",
        "bool_vec_to_sel_test.go",
        "buffer_test.go",
        "builtin_funcs_test.go",
        "cancel_checker_test.go",
        "case_test.go",
        "cast_test.go",
        "columnarizer_test.go",
        "const_test.go",
        "count_test.go",
        "default_agg_test.go",
        "default_cmp_op_test.go",
        "dep_test.go",
        "deselector_test.go",
        "distinct_test.go",
        "external_hash_joiner_test.go",
        "external_sort_test.go",
        "hash_utils_test.go",
        "hashjoiner_test.go",
        "inject_setup_test.go",
        "is_null_ops_test.go",
        "like_ops_test.go",
        "limit_test.go",
        "main_test.go",
        "materializer_test.go",
        "mergejoiner_test.go",
        "offset_test.go",
        "ordered_synchronizer_test.go",
        "ordinality_test.go",
        "parallel_unordered_synchronizer_test.go",
        "projection_ops_test.go",
        "routers_test.go",
        "rowstovec_test.go",
        "select_in_test.go",
        "selection_ops_test.go",
        "serial_unordered_synchronizer_test.go",
        "simple_project_test.go",
        "sort_chunks_test.go",
        "sort_test.go",
        "sorttopk_test.go",
        "spilling_queue_test.go",
        "stats_test.go",
        "types_integration_test.go",
        "utils_test.go",
        "window_functions_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        ":colexec",
        "//pkg/col/coldata",
        "//pkg/col/coldataext",
        "//pkg/col/coldatatestutils",
        "//pkg/col/colserde",
        "//pkg/col/typeconv",
        "//pkg/settings/cluster",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/colcontainer",
        "//pkg/sql/colexec/colbuilder",
        "//pkg/sql/colexec/execgen",
        "//pkg/sql/colexecbase",
        "//pkg/sql/colexecbase/colexecerror",
        "//pkg/sql/colmem",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/parser",
        "//pkg/sql/rowexec",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/sql/sqlbase",
        "//pkg/sql/types",
        "//pkg/testutils",
        "//pkg/testutils/buildutil",
        "//pkg/testutils/colcontainerutils",
        "//pkg/testutils/distsqlutils",
        "//pkg/testutils/skip",
        "//pkg/util/duration",
        "//pkg/util/encoding",
        "//pkg/util/envutil",
        "//pkg/util/humanizeutil",
        "//pkg/util/json",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/mon",
        "//pkg/util/randutil",
        "//pkg/util/syncutil",
        "//pkg/util/timeofday",
        "//pkg/util/timeutil",
        "//pkg/util/timeutil/pgdate",
        "//vendor/github.com/apache/arrow/go/arrow/array",
        "//vendor/github.com/cockroachdb/apd/v2:apd",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/marusama/semaphore",
        "//vendor/github.com/pmezard/go-difflib/difflib",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
